# PaperFlow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: fly-deploy.yml  version-and-merge.yml
app/: __init__.py  main.py
app/api/routes/: conversion.py  health.py
app/core/: __init__.py  config.py  security.py
app/schemas/: __init__.py  conversion.py
app/services/: __init__.py  article_extractor.py  conversion_service.py  dropbox_service.py  job_manager.py  mercury_parser.py  pdf_generator.py
app/templates/: article.html  eink_styles.css
docs/: DROPBOX_SETUP.md
scripts/: get_dropbox_refresh_token.py
tests/: README.md  test_api_routes.py  test_article_content_extraction.py  test_article_extraction.py  test_dropbox_connection.py  test_html_extraction.py  test_pdf_generation.py  test_pdf_generation_comprehensive.py  test_pdf_with_real_url.py  test_refresh_token_unit.py  test_single_medium_article.py
